kubernetes/base/service.yml
apiVersion: v1
kind: Service
metadata:
  name: service
  namespace: ${NAMESPACE}
  labels:
    service: app
spec:
  ports:
    - name: api
      port: 80
      targetPort: ${PORT}
      protocol: TCP
  selector:
    service: app
  type: ClusterIP
