kubernetes/base/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: ${NAMESPACE}
  labels:
    service: app
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    cert-manager.io/issue-temporary-certificate: 'true'
    kubernetes.io/ingress.class: haproxy
spec:
  tls:
    - hosts:
        # $DEPLOYMENT_ENV => dev./staging./""
        - fop.${DEPLOYMENT_ENV}bratislava.sk
        - www.fop.${DEPLOYMENT_ENV}bratislava.sk
      secretName: tls
  rules:
    - host: fop.${DEPLOYMENT_ENV}bratislava.sk
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: ${BUILD_REPOSITORY_NAME}-service
                port:
                  number: 80
    - host: www.fop.${DEPLOYMENT_ENV}bratislava.sk
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: ${BUILD_REPOSITORY_NAME}-service
                port:
                  number: 80
